# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//build/test.gni")

mechbody_module_output_path =
    "mechbody_controller/mechbody_controller/mechbodyservicetest"

mechbody_path =
    "//foundation/distributedhardware/mechbody_controller"

config("mech_test_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "${mechbody_path}/services/include",
    "${mechbody_path}/services/src",
    "${mechbody_path}/services/include/dotReport",
    "${mechbody_path}/services/include/connect",
    "${mechbody_path}/services/include/controller",
    "${mechbody_path}/services/include/motion",
    "${mechbody_path}/services/include/transport",
    "${mechbody_path}/services/include/transport/command",
    "${mechbody_path}/services/include/transport/command/0x01",
    "${mechbody_path}/services/include/transport/command/0x02",
    "${mechbody_path}/services/include/transport/command/0x03",
    "${mechbody_path}/interface/inner_api",
    "${mechbody_path}/services/include/utils",
  ]
}

mech_external_deps = [
  "ability_base:base",
  "access_token:libaccesstoken_sdk",
  "access_token:libtokensetproc_shared",
  "bluetooth:btframework",
  "bluetooth:btcommon",
  "cJSON:cjson",
  "c_utils:utils",
  "camera_framework:camera_framework",
  "drivers_interface_camera:metadata",
  "eventhandler:libeventhandler",
  "graphic_surface:surface",
  "hilog:libhilog",
  "init:libbegetutil",
  "input:libmmi-client",
  "input:oh_input_manager",
  "ipc:ipc_core",
  "safwk:system_ability_fwk",
  "samgr:samgr_proxy",
  "sensor:sensor_interface_native",
  "hisysevent:libhisysevent",
  "distributed_notification_service:ans_innerkits",
  "ability_runtime:ability_manager",  
  "ability_runtime:app_manager",
]

mech_public_deps = [ "${mechbody_path}/services:mechbody_service" ]

ohos_unittest("mc_montion_manager_test") {
  cflags = [
    "-Dprivate=public",
    "-Dprotected=public",
  ]
  visibility = [ ":*" ]

  module_out_path = mechbody_module_output_path

  sanitize = {
    blocklist = "./cfi_blocklist.txt"
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [ "motion/mc_motion_manager_test.cpp",
              "motion/mc_motion_manager_two_test.cpp" ]

  configs = [
    ":mech_test_config",
    "${mechbody_path}/test/resource:coverage_flags",
  ]

  external_deps = mech_external_deps
  deps = mech_public_deps

  part_name = "mechbody_controller"
  subsystem_name = "distributedhardware"
}

ohos_unittest("mc_transport_command_test") {
  cflags = [
    "-Dprivate=public",
    "-Dprotected=public",
  ]
  visibility = [ ":*" ]

  module_out_path = mechbody_module_output_path

  sanitize = {
    blocklist = "./cfi_blocklist.txt"
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [
    "transport/mc_data_buffer_test.cpp",
    "transport/mc_protocol_convertor_test.cpp",
    "transport/mc_send_adapter_test.cpp",    
  ]

  configs = [
    ":mech_test_config",
    "${mechbody_path}/test/resource:coverage_flags",
  ]

  external_deps = mech_external_deps
  deps = mech_public_deps

  part_name = "mechbody_controller"
  subsystem_name = "distributedhardware"
}

ohos_unittest("ble_send_manager_test") {
  visibility = [ ":*" ]

  module_out_path = mechbody_module_output_path

  cflags = [
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  sanitize = {
    blocklist = "./cfi_blocklist.txt"
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [ "ble_send_manager_test.cpp" ]

  configs = [
    ":mech_test_config",
    "${mechbody_path}/test/resource:coverage_flags",
  ]

  external_deps = mech_external_deps
  deps = mech_public_deps

  part_name = "mechbody_controller"
  subsystem_name = "distributedhardware"
}

ohos_unittest("connect_manager_test") {
  visibility = [ ":*" ]

  module_out_path = mechbody_module_output_path

  cflags = [
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  sanitize = {
    blocklist = "./cfi_blocklist.txt"
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [
    "connect_manager/bluetooth_state_test.cpp",
    "connect_manager/connect_manager_test.cpp",
  ]

  configs = [
    ":mech_test_config",
    "${mechbody_path}/test/resource:coverage_flags",
  ]

  external_deps = mech_external_deps
  deps = mech_public_deps

  part_name = "mechbody_controller"
  subsystem_name = "distributedhardware"
}

ohos_unittest("mc_send_manager_test") {
  visibility = [ ":*" ]

  module_out_path = mechbody_module_output_path

  cflags = [
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  sanitize = {
    blocklist = "./cfi_blocklist.txt"
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [ "mc_send_manager/mc_send_manager_test.cpp" ]

  configs = [
    ":mech_test_config",
    "${mechbody_path}/test/resource:coverage_flags",
  ]

  external_deps = mech_external_deps
  deps = mech_public_deps

  part_name = "mechbody_controller"
  subsystem_name = "distributedhardware"
}

ohos_unittest("mc_subcription_center_test") {
  visibility = [ ":*" ]

  module_out_path = mechbody_module_output_path

  cflags = [
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  sanitize = {
    blocklist = "./cfi_blocklist.txt"
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [ "mc_subcription_center/mc_subcription_center_test.cpp" ]

  configs = [
    ":mech_test_config",
    "${mechbody_path}/test/resource:coverage_flags",
  ]

  external_deps = mech_external_deps
  deps = mech_public_deps

  part_name = "mechbody_controller"
  subsystem_name = "distributedhardware"
}

ohos_unittest("mc_command_test") {
  cflags = [
    "-Dprivate=public",
    "-Dprotected=public",
  ]
  visibility = [ ":*" ]

  module_out_path = mechbody_module_output_path

  sanitize = {
    blocklist = "./cfi_blocklist.txt"
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [ "transport/command/mc_command_test.cpp" ]

  configs = [
    ":mech_test_config",
    "${mechbody_path}/test/resource:coverage_flags",
  ]

  external_deps = mech_external_deps
  deps = mech_public_deps

  part_name = "mechbody_controller"
  subsystem_name = "distributedhardware"
}

ohos_unittest("mc_command_test_0x02") {
  cflags = [
    "-Dprivate=public",
    "-Dprotected=public",
  ]
  visibility = [ ":*" ]

  module_out_path = mechbody_module_output_path

  sanitize = {
    blocklist = "./cfi_blocklist.txt"
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [ "transport/command/mc_command_test_0x02.cpp" ]

  configs = [
    ":mech_test_config",
    "${mechbody_path}/test/resource:coverage_flags",
  ]

  external_deps = mech_external_deps
  deps = mech_public_deps

  part_name = "mechbody_controller"
  subsystem_name = "distributedhardware"
}

ohos_unittest("mechbody_controller_stub_test") {
  visibility = [ ":*" ]

  module_out_path = mechbody_module_output_path

  cflags = [
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  sanitize = {
    blocklist = "./cfi_blocklist.txt"
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [ "mechbody_controller_stub_test.cpp" ]

  configs = [
    ":mech_test_config",
    "${mechbody_path}/test/resource:coverage_flags",
  ]

  external_deps = mech_external_deps
  deps = mech_public_deps

  part_name = "mechbody_controller"
  subsystem_name = "distributedhardware"
}

ohos_unittest("mechbody_controller_service_test") {
  visibility = [ ":*" ]

  module_out_path = mechbody_module_output_path

  cflags = [
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  sanitize = {
    blocklist = "./cfi_blocklist.txt"
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [ "mechbody_controller_service_test.cpp" ]

  configs = [
    ":mech_test_config",
    "${mechbody_path}/test/resource:coverage_flags",
  ]

  external_deps = mech_external_deps
  deps = mech_public_deps

  part_name = "mechbody_controller"
  subsystem_name = "distributedhardware"
}

ohos_unittest("mc_camera_tracking_controller_test") {
  visibility = [ ":*" ]

  module_out_path = mechbody_module_output_path

  cflags = [
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  sanitize = {
    blocklist = "./cfi_blocklist.txt"
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [ "controller/mc_camera_tracking_controller_test.cpp",
              "controller/mc_camera_tracking_controller_two_test.cpp" ]

  configs = [
    ":mech_test_config",
    "${mechbody_path}/test/resource:coverage_flags",
  ]

  external_deps = mech_external_deps
  deps = mech_public_deps

  part_name = "mechbody_controller"
  subsystem_name = "distributedhardware"
}

ohos_unittest("load_mechbody_adapter_test") {
  visibility = [ ":*" ]

  module_out_path = mechbody_module_output_path

  cflags = [
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  sanitize = {
    blocklist = "./cfi_blocklist.txt"
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [ "utils/load_mechbody_adapter_test.cpp" ]

  configs = [
    ":mech_test_config",
    "${mechbody_path}/test/resource:coverage_flags",
  ]

  external_deps = mech_external_deps
  deps = mech_public_deps

  part_name = "mechbody_controller"
  subsystem_name = "distributedhardware"
}

ohos_unittest("mc_command_test_0x01") {
  cflags = [
    "-Dprivate=public",
    "-Dprotected=public",
  ]
  visibility = [ ":*" ]

  module_out_path = mechbody_module_output_path

  sanitize = {
    blocklist = "./cfi_blocklist.txt"
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [ "transport/command/0x01/mc_action_gimbal_feature_control_cmd_test.cpp",
            "transport/command/0x01/mc_set_mech_motion_control_cmd_test.cpp",
            "transport/command/0x01/mc_command_test01.cpp" ]

  configs = [
    ":mech_test_config",
    "${mechbody_path}/test/resource:coverage_flags",
  ]

  external_deps = mech_external_deps
  deps = mech_public_deps

  part_name = "mechbody_controller"
  subsystem_name = "distributedhardware"
}

ohos_unittest("mc_wheel_set_mech_motion_control_cmd_test") {
  visibility = [ ":*" ]

  module_out_path = mechbody_module_output_path

  cflags = [
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  sanitize = {
    blocklist = "./cfi_blocklist.txt"
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [ "transport/command/0x03/mc_wheel_set_mech_motion_control_cmd_test.cpp" ]

  configs = [
    ":mech_test_config",
    "${mechbody_path}/test/resource:coverage_flags",
  ]

  external_deps = mech_external_deps
  deps = mech_public_deps

  part_name = "mechbody_controller"
  subsystem_name = "distributedhardware"
}

ohos_unittest("mc_wheel_set_mech_rotation_trace_cmd_test") {
  visibility = [ ":*" ]

  module_out_path = mechbody_module_output_path

  cflags = [
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  sanitize = {
    blocklist = "./cfi_blocklist.txt"
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [ "transport/command/0x03/mc_wheel_set_mech_rotation_trace_cmd_test.cpp" ]

  configs = [
    ":mech_test_config",
    "${mechbody_path}/test/resource:coverage_flags",
  ]

  external_deps = mech_external_deps
  deps = mech_public_deps

  part_name = "mechbody_controller"
  subsystem_name = "distributedhardware"
}

ohos_unittest("mc_wheel_get_mech_movement_capability_cmd_test") {
  visibility = [ ":*" ]
 
  module_out_path = mechbody_module_output_path
 
  cflags = [
    "-Dprivate=public",
    "-Dprotected=public",
  ]
 
  sanitize = {
    blocklist = "./cfi_blocklist.txt"
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
 
  sources = [ "transport/command/0x03/mc_wheel_get_mech_movement_capability_cmd_test.cpp" ]
 
  configs = [
    ":mech_test_config",
    "${mechbody_path}/test/resource:coverage_flags",
  ]
 
  external_deps = mech_external_deps
  deps = mech_public_deps
 
  part_name = "mechbody_controller"
  subsystem_name = "distributedhardware"
}

ohos_unittest("mc_wheel_set_mech_scene_control_cmd_test") {
  visibility = [ ":*" ]

  module_out_path = mechbody_module_output_path

  cflags = [
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  sanitize = {
    blocklist = "./cfi_blocklist.txt"
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [ "transport/command/0x03/mc_wheel_set_mech_scene_control_cmd_test.cpp" ]

  configs = [
    ":mech_test_config",
    "${mechbody_path}/test/resource:coverage_flags",
  ]

  external_deps = mech_external_deps
  deps = mech_public_deps

  part_name = "mechbody_controller"
  subsystem_name = "distributedhardware"
}

ohos_unittest("subscribe_event_utils_test") {
  visibility = [ ":*" ]

  module_out_path = mechbody_module_output_path

  cflags = [
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  sanitize = {
    blocklist = "./cfi_blocklist.txt"
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [ "utils/subscribe_event_utils_test.cpp" ]

  configs = [
    ":mech_test_config",
    "${mechbody_path}/test/resource:coverage_flags",
  ]

  external_deps = mech_external_deps
  deps = mech_public_deps

  part_name = "mechbody_controller"
  subsystem_name = "distributedhardware"
}

ohos_unittest("resource_manager_utils_test") {
  visibility = [ ":*" ]

  module_out_path = mechbody_module_output_path

  cflags = [
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  sanitize = {
    blocklist = "./cfi_blocklist.txt"
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [ "utils/resource_manager_utils_test.cpp" ]

  configs = [
    ":mech_test_config",
    "${mechbody_path}/test/resource:coverage_flags",
  ]

  external_deps = mech_external_deps
  deps = mech_public_deps

  part_name = "mechbody_controller"
  subsystem_name = "distributedhardware"
}

ohos_unittest("mc_register_mech_obstacle_info_cmd_test") {
  visibility = [ ":*" ]

  module_out_path = mechbody_module_output_path

  cflags = [
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  sanitize = {
    blocklist = "./cfi_blocklist.txt"
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [ "transport/command/0x03/mc_register_mech_obstacle_info_cmd_test.cpp" ]

  configs = [
    ":mech_test_config",
    "${mechbody_path}/test/resource:coverage_flags",
  ]

  external_deps = mech_external_deps
  deps = mech_public_deps

  part_name = "mechbody_controller"
  subsystem_name = "distributedhardware"
}

group("unittest") {
  testonly = true
  deps = [
    ":ble_send_manager_test",
    ":connect_manager_test",
    ":mc_camera_tracking_controller_test",
    ":mc_command_test",
    ":mc_command_test_0x01",
    ":mc_command_test_0x02",
    ":mc_montion_manager_test",
    ":mc_send_manager_test",
    ":mc_subcription_center_test",
    ":mc_transport_command_test",
    ":mechbody_controller_service_test",
    ":mechbody_controller_stub_test",
    ":mc_wheel_set_mech_motion_control_cmd_test",
    ":mc_wheel_set_mech_rotation_trace_cmd_test",
    ":mc_wheel_set_mech_scene_control_cmd_test",
    ":subscribe_event_utils_test",
    ":resource_manager_utils_test",
    ":mc_register_mech_obstacle_info_cmd_test",
    ":mc_wheel_get_mech_movement_capability_cmd_test",
  ]
}
