# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/config/features.gni")
import("//build/test.gni")

ohos_fuzztest("McMotionManagerFourteenFuzzTest") {
  module_out_path = "mechbody_controller/mechbody_controller/"
  mechbody_path =
      "//foundation/distributedhardware/mechbody_controller"
  fuzz_config_file = "${mechbody_path}/test/fuzztest/mcmotionmanagerfourteen_fuzzer"

  include_dirs = [
    "//foundation/distributedhardware/mechbody_controller/services/include",
    "//foundation/distributedhardware/mechbody_controller/services/include/motion",
    "//foundation/distributedhardware/mechbody_controller/services/include/transport",
    "//foundation/distributedhardware/mechbody_controller/services/include/transport/command",
    "//foundation/distributedhardware/mechbody_controller/services/include/transport/command/0x01",
    "//foundation/distributedhardware/mechbody_controller/services/include/transport/command/0x02",
    "//foundation/distributedhardware/mechbody_controller/services/include/transport/command/0x03",
    "//foundation/distributedhardware/mechbody_controller/services/include/controller",
    "//foundation/distributedhardware/mechbody_controller/services/include/connect",
    "//foundation/distributedhardware/mechbody_controller/services/include/swing",
    "//foundation/distributedhardware/mechbody_controller/services/include/utils",
    "//foundation/distributedhardware/mechbody_controller/interface/inner_api",
    "//foundation/distributedhardware/mechbody_controller/test/fuzztest/common",
  ]
  
  cflags = ["-g", "-O0", "-w", "-fno-omit-frame-pointer", "-Dprivate=public", "-Dprotected=public"]
  
  sources = [
    "mcmotionmanagerfourteen_fuzzer.cpp"
  ]
  
  deps = [
    "//foundation/distributedhardware/mechbody_controller/services:mechbody_service",
  ]
  
  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "access_token:libtokensetproc_shared",
    "ability_base:base",
    "ability_runtime:ability_manager",
    "ability_runtime:app_manager",
    "bluetooth:btframework",
    "bluetooth:btcommon",
    "camera_framework:camera_framework",
    "cJSON:cjson",
    "c_utils:utils",
    "distributed_notification_service:ans_innerkits",
    "drivers_interface_camera:metadata",
    "eventhandler:libeventhandler",
    "graphic_surface:surface",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "init:libbegetutil",
    "input:libmmi-client",
    "input:oh_input_manager",
    "ipc:ipc_core",
    "os_account:libaccountkits",
    "os_account:os_account_innerkits",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "sensor:sensor_interface_native",
    "window_manager:libdm_lite",
  ]
  
  ldflags = ["-Wl,--allow-multiple-definition"]
}

group("fuzztest") {
  testonly = true
  deps = [
    ":McMotionManagerFourteenFuzzTest",
  ]
}