# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")
import(
    "//foundation/distributedhardware/mechbody_controller/mechbody.gni")

ohos_fuzztest("MechManagerInnerFuzzTest") {
  module_out_path = "mechbody_controller/mechbody_controller/"
  mechbody_path =
      "//foundation/distributedhardware/mechbody_controller"
  fuzz_config_file =
      "${mechbody_path}/test/fuzztest/mechmanagerinner_fuzzer"
  include_dirs = []
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [
    "${mechbody_path}/test/fuzztest/mechmanagerinner_fuzzer/mechmanagerinner_fuzzer.cpp",
  ]

  deps = []

  external_deps = ["api_metrics:histogrammanager",]
}

group("fuzztest") {
  testonly = true
  deps = [ ":MechManagerInnerFuzzTest" ]
}